# finance_copilot

./: .gitignore  README.md  pyproject.toml  render.yaml
app/agent/: finance_agent.py
app/rag/: hybrid_search.py
app/rag/store/: index.json
app/schemas/: data_models.py
data/kb/: budget-guidelines.md  employee-finance-faq.md  expense-policy.md  finance-glossary.md
data/structured/: expenses.json  invoices.json  vendors.json
scripts/: generate_synthetic_data.py  ingest.py
ui/: app.py
