[project]
name = "finance-copilot"
version = "0.1.0"
description = "Educational Streamlit finance copilot with PydanticAI tools and agentic RAG over synthetic data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.1",
    "pydantic>=2.7",
    "pydantic-ai>=0.0.14",
    "streamlit>=1.36",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
